Fixing the punctuation after equations...

--- a/errata.tex
+++ b/errata.tex
@@ -109,7 +109,7 @@ fields, it is possible for equation~(27) to produce a purity of 1
 for some entangled states. For example, consider the normalized 3-qubit
 state $\ket{\Psi_{0}}$ over $\ff{7^{2}}$: 
 \[
-\ket{\Psi_{0}}=\ket{011}+\left(-2-\rmi\right)\ket{100}+\ket{101}+\ket{110}
+\ket{\Psi_{0}}=\ket{011}+\left(-2-\rmi\right)\ket{100}+\ket{101}+\ket{110}\textrm{ .}
 \]
 
 
@@ -131,12 +131,12 @@ states in the following corrected section 5.4.
 In conventional quantum mechanics, a state is maximally entangled
 when equation~(27) reports its purity to be 0. In the discrete case,
 states whose purity is a multiple of the field characteristic are
-incorrectly labeled as maximally entangled. For example, the normalized
-3-qubit product state $\ket{\Psi_{1}}$ over $\ff{3^{2}}$: 
+incorrectly labeled as maximally entangled. For example, consider
+the normalized 3-qubit product state $\ket{\Psi_{1}}$ over $\ff{3^{2}}$:
 \[
-\ket{\Psi_{1}}=\ket{0}\otimes\left(\ket{0}-\ket{1}\right)\otimes\left(\ket{0}-\ket{1}\right)
+\ket{\Psi_{1}}=\ket{0}\otimes\left(\ket{0}-\ket{1}\right)\otimes\left(\ket{0}-\ket{1}\right)\textrm{ .}
 \]
-has the purity $\overline{P_{\fh}}=0$, where 
+$\ket{\Psi_{1}}$ has the purity $\overline{P_{\fh}}=0$, where 
 \[
 \overline{P_{\fh}}=\sum_{j=1}^{n}\sum_{\mu=x,y,z}\left\langle \sigma_{\mu}^{j}\right\rangle ^{2}
 \]
@@ -146,7 +146,7 @@ is equation~(27) eliminating the $1/n$ factor.
 In continuous case, the zero purity actually means every summand is
 $0$, i.e., 
 \begin{equation}
-\forall j,\forall\mu,\braket{\sigma_{\mu}^{j}}=0\ ,\label{eq:john}
+\forall j,\forall\mu,\braket{\sigma_{\mu}^{j}}=0\textrm{ .}\label{eq:john}
 \end{equation}
 Because equation (\ref{eq:john}) avoids any wrapping around when
 adding expectation values, it defines maximally entangled states over
