--- a/errata.lyx
+++ b/errata.lyx
@@ -274,7 +274,7 @@ In conventional quantum mechanics, using the real and complex numbers, a
 : 
 \begin_inset Formula 
 \[
-\ket{\Psi_{0}}=\ket{011}+\left(-2-\rmi\right)\ket{100}+\ket{101}+\ket{110}
+\ket{\Psi_{0}}=\ket{011}+\left(-2-\rmi\right)\ket{100}+\ket{101}+\ket{110}\textrm{ .}
 \]
 
 \end_inset
@@ -321,7 +321,7 @@ In conventional quantum mechanics, a state is maximally entangled when equation
 (27) reports its purity to be 0.
  In the discrete case, states whose purity is a multiple of the field characteri
 stic are incorrectly labeled as maximally entangled.
- For example, the normalized 3-qubit product state 
+ For example, consider the normalized 3-qubit product state 
 \begin_inset Formula $\ket{\Psi_{1}}$
 \end_inset
 
@@ -332,12 +332,16 @@ stic are incorrectly labeled as maximally entangled.
 : 
 \begin_inset Formula 
 \[
-\ket{\Psi_{1}}=\ket{0}\otimes\left(\ket{0}-\ket{1}\right)\otimes\left(\ket{0}-\ket{1}\right)
+\ket{\Psi_{1}}=\ket{0}\otimes\left(\ket{0}-\ket{1}\right)\otimes\left(\ket{0}-\ket{1}\right)\textrm{ .}
 \]
 
 \end_inset
 
-has the purity 
+
+\begin_inset Formula $\ket{\Psi_{1}}$
+\end_inset
+
+ has the purity 
 \begin_inset Formula $\overline{P_{\fh}}=0$
 \end_inset
 
@@ -368,7 +372,7 @@ In continuous case, the zero purity actually means every summand is
 , i.e., 
 \begin_inset Formula 
 \begin{equation}
-\forall j,\forall\mu,\braket{\sigma_{\mu}^{j}}=0\ ,\label{eq:john}
+\forall j,\forall\mu,\braket{\sigma_{\mu}^{j}}=0\textrm{ .}\label{eq:john}
 \end{equation}
 
 \end_inset
