--- a/note.lyx
+++ b/note.lyx
@@ -125,7 +125,7 @@
 \begin_body
 
 \begin_layout Title
-Erratum: Geometry of discrete quantum computing
+Note on Erratum: Geometry of discrete quantum computing
 \end_layout
 
 \begin_layout Author
@@ -225,325 +225,52 @@ status collapsed
 
 \end_layout
 
-\begin_layout Standard
-\noindent
-Sec.
-\begin_inset space ~
-\end_inset
-
-5.4 of our paper
-\begin_inset space ~
-\end_inset
-
-
-\begin_inset CommandInset citation
-LatexCommand cite
-key "geometry"
-
-\end_inset
-
- requires a clarification and a correction.
-\end_layout
-
-\begin_layout Paragraph*
-Clarification: Unentangled vs.
- product states.
-\end_layout
-
-\begin_layout Standard
-In conventional quantum mechanics, using the real and complex numbers, a
- state is unentangled when it can be expressed as a product state or when
- equation
-\begin_inset space ~
-\end_inset
-
-(27) reports its purity to be 1.
- When using finite fields, it is possible for equation
-\begin_inset space ~
-\end_inset
-
-(27) to produce a purity of 1 for some entangled states.
- For example, consider the normalized 3-qubit state 
-\begin_inset Formula $\ket{\Psi_{0}}$
-\end_inset
-
- over 
-\begin_inset Formula $\ff{7^{2}}$
-\end_inset
-
-: 
-\begin_inset Formula 
-\[
-\ket{\Psi_{0}}=\ket{011}+\left(-2-\rmi\right)\ket{100}+\ket{101}+\ket{110}
-\]
-
-\end_inset
-
-
-\end_layout
-
-\begin_layout Standard
-Thus, in finite fields, the simplest way to calculate the number of unentangled
- states is to ignore equation
-\begin_inset space ~
-\end_inset
-
-(27) and to count the number of product states.
- This is exactly how the counting in section
-\begin_inset space ~
-\end_inset
-
-5.4 was produced, but the paper did not clarify that counting using equation
-\begin_inset space ~
-\end_inset
-
-(27) would be incorrect.
-\end_layout
-
-\begin_layout Paragraph*
-Correction: Maximally entangled states.
-\end_layout
-
-\begin_layout Standard
-We correct the definition and the counting of maximally entangled states
- in the following corrected section 5.4.
+\begin_layout Section
+Product States
 \end_layout
 
 \begin_layout Subsection
-Maximal entanglement
-\end_layout
-
-\begin_layout Standard
-In conventional quantum mechanics, a state is maximally entangled when equation
-\begin_inset space ~
-\end_inset
-
-(27) reports its purity to be 0.
- In the discrete case, states whose purity is a multiple of the field characteri
-stic are incorrectly labeled as maximally entangled.
- For example, the normalized 3-qubit product state 
-\begin_inset Formula $\ket{\Psi_{1}}$
-\end_inset
-
- over 
-\begin_inset Formula $\ff{3^{2}}$
-\end_inset
-
-: 
-\begin_inset Formula 
-\[
-\ket{\Psi_{1}}=\ket{0}\otimes\left(\ket{0}-\ket{1}\right)\otimes\left(\ket{0}-\ket{1}\right)
-\]
-
-\end_inset
-
-has the purity 
-\begin_inset Formula $\overline{P_{\fh}}=0$
-\end_inset
-
-, where 
-\begin_inset Formula 
-\[
-\overline{P_{\fh}}=\sum_{j=1}^{n}\sum_{\mu=x,y,z}\left\langle \sigma_{\mu}^{j}\right\rangle ^{2}
-\]
-
-\end_inset
-
-is equation
-\begin_inset space ~
-\end_inset
-
-(27) eliminating the 
-\begin_inset Formula $1/n$
-\end_inset
-
- factor.
-\end_layout
-
-\begin_layout Standard
-In continuous case, the zero purity actually means every summand is 
-\begin_inset Formula $0$
-\end_inset
-
-, i.e., 
-\begin_inset Formula 
-\begin{equation}
-\forall j,\forall\mu,\braket{\sigma_{\mu}^{j}}=0\ ,\label{eq:john}
-\end{equation}
-
-\end_inset
-
-Because equation (
-\begin_inset CommandInset ref
-LatexCommand ref
-reference "eq:john"
-
-\end_inset
-
-) avoids any wrapping around when adding expectation values, it defines
- maximally entangled states over finite fields.
-\end_layout
-
-\begin_layout Standard
-Computing some examples for various 
-\begin_inset Formula $n$
-\end_inset
-
- and small values of 
+The definition of product state is dependent on 
 \begin_inset Formula $p$
 \end_inset
 
-, one can verify explicitly that unit-norm product states for 
-\begin_inset Formula $n=2$
-\end_inset
 
-, 
-\begin_inset Formula $p=\{3,7,11,19,\ldots\}$
-\end_inset
+\end_layout
 
- occur with frequency 
+\begin_layout Standard
+\noindent
+Consider a generic state 
 \begin_inset Formula 
 \[
-(p+1)p^{2}(p-1)^{2}=\{144,14\,112,145\,200,2339\,280,\ldots\}\ ,
+\ket{\Psi}=\alpha_{0}\ket{00}+\alpha_{1}\ket{01}+\alpha_{2}\ket{10}+\alpha_{3}\ket{11}
 \]
 
 \end_inset
 
-and for general 
-\begin_inset Formula $n$
-\end_inset
-
-, 
-\begin_inset Formula $(p+1)p^{n}(p-1)^{n}$
+with coefficients in 
+\begin_inset Formula $\ff{p^{2}}$
 \end_inset
 
 .
-\end_layout
-
-\begin_layout Standard
-The irreducible state counts are reduced by 
-\begin_inset Formula $(p+1)$
+ In order to determine whether 
+\begin_inset Formula $\ket{\Psi}$
 \end_inset
 
-, giving 
+ is a product state or not, we consider the general product state
 \begin_inset Formula 
 \[
-p^{2}(p-1)^{2}=\{36,1764,12\,100,116\,964,\ldots\}\ ,
+\left(\beta_{0}\ket{0}+\beta_{1}\ket{1}\right)=+\alpha_{2}\ket{10}+\alpha_{3}\ket{11}
 \]
 
 \end_inset
 
-and in general for 
-\begin_inset Formula $n$
-\end_inset
-
--qubits, there are 
-\begin_inset Formula $p^{n}\left(p-1\right)^{n}$
-\end_inset
-
- instances of product pure states.
-\end_layout
-
-\begin_layout Standard
-Repeating the computation, we find maximally entanglement states with frequencie
-s for two qubits of 
-\begin_inset Formula 
-\[
-p\left(p-1\right)\left(p+1\right)^{2}=\left\{ 96,2688,15\,840,136\,800,\ldots\right\} \ .
-\]
-
-\end_inset
-
-The irreducible state counts for maximal entanglement are reduced by 
-\begin_inset Formula $\left(p+1\right)$
-\end_inset
-
-, giving for 
-\begin_inset Formula $n=2$
-\end_inset
-
+and compare the coefficient.
+ How would you know if this is a product state? You would have to postulate
+ it is of the form (x0 |0> + y0 |1>) x (x1 |0> + y1 |1>) x (x2 |0> + y2
+ |1>) and solve the equations in the field.
+ It is clear that the existence of a solution or not would depend on p in
+ general.
  
-\begin_inset Formula 
-\[
-p\left(p^{2}-1\right)=\left\{ 24,336,1320,6840,\ldots\right\} \ .
-\]
-
-\end_inset
-
-For three-qubits, there are 
-\begin_inset Formula $p^{3}\left(p^{4}-1\right)\left(p+1\right)$
-\end_inset
-
- instances of pure maximally entangled states, while the general formula
- for four-qubit states remains unclear.
-\end_layout
-
-\begin_layout Standard
-\begin_inset ERT
-status collapsed
-
-\begin_layout Plain Layout
-
-
-\backslash
-ack
-\end_layout
-
-\end_inset
-
-
-\begin_inset ERT
-status collapsed
-
-\begin_layout Plain Layout
-
-{}
-\end_layout
-
-\end_inset
-
-
-\begin_inset ERT
-status collapsed
-
-\begin_layout Plain Layout
-
-{
-\end_layout
-
-\end_inset
-
-We would like to thank John Gardiner for pointing out the need for this
- correction.
-\begin_inset ERT
-status collapsed
-
-\begin_layout Plain Layout
-
-}
-\end_layout
-
-\end_inset
-
-
-\end_layout
-
-\begin_layout Section*
-References
-\end_layout
-
-\begin_layout Standard
-\begin_inset ERT
-status collapsed
-
-\begin_layout Plain Layout
-
-{}
-\end_layout
-
-\end_inset
-
-
 \end_layout
 
 \begin_layout Standard
