--- a/errata.tex
+++ b/errata.tex
@@ -136,11 +136,11 @@ the normalized 3-qubit product state $\ket{\Psi_{1}}$ over $\ff{3^{2}}$:
 \[
 \ket{\Psi_{1}}=\ket{0}\otimes\left(\ket{0}-\ket{1}\right)\otimes\left(\ket{0}-\ket{1}\right)\textrm{ .}
 \]
-$\ket{\Psi_{1}}$ has the purity $\overline{P_{\fh}}=0$, where 
+$\ket{\Psi_{1}}$ has the re-scaled purity $\overline{P_{\fh}}=0$,
+where 
 \[
-\overline{P_{\fh}}=\sum_{j=1}^{n}\sum_{\mu=x,y,z}\left\langle \sigma_{\mu}^{j}\right\rangle ^{2}
+\overline{P_{\fh}}=\sum_{j=1}^{n}\sum_{\mu=x,y,z}\left\langle \sigma_{\mu}^{j}\right\rangle ^{2}\textrm{ .}
 \]
-is equation~(27) eliminating the $1/n$ factor.
 
 
 In continuous case, the zero purity actually means every summand is
