--- a/errata.lyx
+++ b/errata.lyx
@@ -227,7 +227,7 @@ status collapsed
 
 \begin_layout Standard
 \noindent
-Sec.
+Section
 \begin_inset space ~
 \end_inset
 
@@ -263,24 +263,16 @@ In conventional quantum mechanics, using the real and complex numbers, a
 \end_inset
 
 (27) to produce a purity of 1 for some entangled states.
- For example, consider a normalized state 
-\begin_inset Formula $\ket{\Psi_{0}}$
+ For example, a normalized entangled state 
+\begin_inset Formula $\ket{011}+\left(-2-\rmi\right)\ket{100}+\ket{101}+\ket{110}$
+\end_inset
+
+ has 
+\begin_inset Formula $P_{\fh}=1$
 \end_inset
 
  over 
 \begin_inset Formula $\ff{7^{2}}$
-\end_inset
-
-: 
-\begin_inset Formula 
-\[
-\ket{\Psi_{0}}=\ket{011}+\left(-2-\rmi\right)\ket{100}+\ket{101}+\ket{110}\textrm{ .}
-\]
-
-\end_inset
-
-This is an entangled state with 
-\begin_inset Formula $P_{\fh}=1$
 \end_inset
 
 .
@@ -309,8 +301,25 @@ Correction: Maximally entangled states.
 \end_layout
 
 \begin_layout Standard
-We correct the definition and the counting of maximally entangled states
- in the following corrected section 5.4.
+We correct the definition and the counting of maximally entangled states,
+ and add equation
+\begin_inset space ~
+\end_inset
+
+(
+\begin_inset CommandInset ref
+LatexCommand ref
+reference "eq:john"
+
+\end_inset
+
+).
+ The corrected version of section
+\begin_inset space ~
+\end_inset
+
+5.4 below has no influence on the rest of the article.
+ 
 \end_layout
 
 \begin_layout Subsection
@@ -376,8 +385,8 @@ reference "eq:john"
 
 \end_inset
 
-) avoids any wrapping around when adding expectation values, it defines
- maximally entangled states over finite fields.
+) avoids wrapping around when adding expectation values, it defines maximally
+ entangled states over finite fields.
 \end_layout
 
 \begin_layout Standard
