--- a/errata.tex
+++ b/errata.tex
@@ -108,7 +108,7 @@ a state is unentangled when it can be expressed as a product state
 or when equation~(27) reports its purity to be 1. When using finite
 fields, it is possible for equation~(27) to produce a purity of 1
 for some entangled states. For example, a normalized entangled state
-$\ket{011}+\left(-2-\rmi\right)\ket{100}+\ket{101}+\ket{110}$ has
+$\ket{011}+\left(2+\rmi\right)\ket{100}+\ket{101}+\ket{110}$ has
 $P_{\fh}=1$ over $\ff{7^{2}}$.
 
 
