Update bib file

--- a/gardinerbib.bib
+++ b/gardinerbib.bib
@@ -2,6 +2,40 @@
 % Encoding: MS950
 
 
+@Article{PhysRevLett.92.107902,
+  Title                    = {A Subsystem-Independent Generalization of Entanglement},
+  Author                   = {Barnum, Howard and Knill, Emanuel and Ortiz, Gerardo and Somma, Rolando and Viola, Lorenza},
+  Journal                  = {Phys. Rev. Lett.},
+  Year                     = {2004},
+
+  Month                    = {Mar},
+  Pages                    = {107902},
+  Volume                   = {92},
+
+  Doi                      = {10.1103/PhysRevLett.92.107902},
+  Issue                    = {10},
+  Numpages                 = {4},
+  Publisher                = {American Physical Society},
+  Url                      = {http://link.aps.org/doi/10.1103/PhysRevLett.92.107902}
+}
+
+@Article{PhysRevA.68.032308,
+  Title                    = {Generalizations of entanglement based on coherent states and convex sets},
+  Author                   = {Barnum, Howard and Knill, Emanuel and Ortiz, Gerardo and Viola, Lorenza},
+  Journal                  = {Phys. Rev. A},
+  Year                     = {2003},
+
+  Month                    = {Sep},
+  Pages                    = {032308},
+  Volume                   = {68},
+
+  Doi                      = {10.1103/PhysRevA.68.032308},
+  Issue                    = {3},
+  Numpages                 = {21},
+  Publisher                = {American Physical Society},
+  Url                      = {http://link.aps.org/doi/10.1103/PhysRevA.68.032308}
+}
+
 @Article{barnum,
   Title                    = {{Post-Classical Probability Theory}},
   Author                   = {{Barnum}, H. and {Wilce}, A.},
