Updates from ShareLaTeX

--- a/errata.tex
+++ b/errata.tex
@@ -98,26 +98,16 @@ IN 47405, U.S.A}
 
 \maketitle
 
-\noindent Section~5.4 of our paper~\cite{geometry} requires a clarification
-and a correction.
+\noindent Section~5.4 of our paper~\cite{geometry} requires a clarification and a correction.
 
-\paragraph*{Clarification: Unentangled vs. product states.}
+\paragraph*{Clarification: Unentangled vs.\ product states.}
 
-In conventional quantum mechanics, using the real and complex numbers,
-a state is unentangled when it can be expressed as a product state
-or when equation~(27) reports its purity to be 1. When using finite
-fields, it is possible for equation~(27) to produce a purity of 1
-for some entangled states. For example, a normalized entangled state
-$\ket{011}+\left(2+\rmi\right)\ket{100}+\ket{101}+\ket{110}$ has
-$P_{\fh}=1$ over $\ff{7^{2}}$.
-
+In conventional quantum mechanics, using the field of complex numbers, a state is unentangled when it can be expressed as a product state or, equivalently, when equation~(27) reports its purity to be 1~\cite{}. When using finite Galois fields $\ff{p^2}$, for particular choices of $p$, it is possible for equation~(27) to produce a purity of 1 for some entangled states. For example, the normalized entangled state $\ket{011}+\left(2+\rmi\right)\ket{100}+\ket{101}+\ket{110}$ has $P_{\fh}=1$ for $p=7$.
 
 Thus, in finite fields, the simplest way to calculate the number of
-unentangled states is to ignore equation~(27) and to count the number
+unentangled states is to disregard equation~(27) and count the number
 of product states. This is exactly how the counting in section~5.4
-was produced, but the paper did not clarify that counting using equation~(27)
-would be incorrect.
-
+was done, but the paper did not clarify that counting using equation~(27) would be incorrect.
 
 \paragraph*{Correction: Maximally entangled states.}
 
