--- a/errata.lyx
+++ b/errata.lyx
@@ -1,4 +1,4 @@
-#LyX 2.1 created this file. For more info see http://www.lyx.org/
+#LyX file created by tex2lyx 2.1
 \lyxformat 474
 \begin_document
 \begin_header
@@ -57,6 +57,10 @@
 \addtocounter{equation}{39}
 \addtocounter{section}{5}
 \addtocounter{subsection}{3}
+
+
+
+
 \end_preamble
 \use_default_options false
 \maintain_unincluded_children false
@@ -129,13 +133,11 @@ Erratum: Geometry of discrete quantum computing
 \end_layout
 
 \begin_layout Author
-Andrew J.
- Hanson
+Andrew J. Hanson
 \end_layout
 
 \begin_layout Address
-School of Informatics and Computing, Indiana University, Bloomington, IN
- 47405, U.S.A
+School of Informatics and Computing, Indiana University, Bloomington, IN 47405, U.S.A
 \end_layout
 
 \begin_layout Author
@@ -151,8 +153,7 @@ Amr Sabry
 \end_layout
 
 \begin_layout Address
-School of Informatics and Computing, Indiana University, Bloomington, IN
- 47405, U.S.A
+School of Informatics and Computing, Indiana University, Bloomington, IN 47405, U.S.A
 \end_layout
 
 \begin_layout Author
@@ -164,60 +165,24 @@ Department of Mathematics, Indiana University, Bloomington, IN 47405, U.S.A
 \end_layout
 
 \begin_layout Address
-School of Informatics and Computing, Indiana University, Bloomington, IN
- 47405, U.S.A
+School of Informatics and Computing, Indiana University, Bloomington, IN 47405, U.S.A
 \end_layout
 
 \begin_layout Standard
-\noindent
 
-\shape italic
-Keywords
 \begin_inset ERT
 status collapsed
 
 \begin_layout Plain Layout
-
-
+%% 
 \backslash
-/
-\end_layout
-
-\end_inset
-
-
-\shape default
-: 
-\begin_inset ERT
-status collapsed
-
-\begin_layout Plain Layout
-
-{
-\end_layout
-
-\end_inset
-
-
-\begin_inset ERT
-status collapsed
-
-\begin_layout Plain Layout
-
-
+noindent{
 \backslash
-today
-\end_layout
-
-\end_inset
-
-
-\begin_inset ERT
-status collapsed
-
-\begin_layout Plain Layout
-
-}
+it Keywords
+\backslash
+/}: {
+\backslash
+today}
 \end_layout
 
 \end_inset
@@ -229,15 +194,18 @@ status collapsed
 \noindent
 Section
 \begin_inset space ~
+
 \end_inset
 
 5.4 of our paper
 \begin_inset space ~
+
 \end_inset
 
 
 \begin_inset CommandInset citation
 LatexCommand cite
+after ""
 key "geometry"
 
 \end_inset
@@ -247,53 +215,89 @@ key "geometry"
 
 \begin_layout Paragraph*
 Clarification: Unentangled vs.
- product states.
+\begin_inset space \space{}
+
+\end_inset
+
+product states.
 \end_layout
 
 \begin_layout Standard
-In conventional quantum mechanics, using the real and complex numbers, a
- state is unentangled when it can be expressed as a product state or when
- equation
+In conventional quantum mechanics, using the field of complex numbers, a state is unentangled when it can be expressed as a product state or, equivalently, when equation
 \begin_inset space ~
+
 \end_inset
 
-(27) reports its purity to be 1.
- When using finite fields, it is possible for equation
+(27) reports its purity to be 1
 \begin_inset space ~
+
 \end_inset
 
-(27) to produce a purity of 1 for some entangled states.
- For example, a normalized entangled state 
-\begin_inset Formula $\ket{011}+\left(2+\rmi\right)\ket{100}+\ket{101}+\ket{110}$
+
+\begin_inset CommandInset citation
+LatexCommand cite
+after ""
+key "PhysRevLett.92.107902, PhysRevA.68.032308"
+
+\end_inset
+
+. When using finite Galois fields 
+\begin_inset Formula $\ff{p^2}$
+\end_inset
+
+, for particular choices of 
+\begin_inset Formula $p$
+\end_inset
+
+, it is possible for equation
+\begin_inset space ~
+
+\end_inset
+
+(27) to produce a purity of 1 for some entangled states. For example, the normalized entangled state 
+\begin_inset Formula $\ket{\Psi} = \ket{011}+\left(2+\rmi\right)\ket{100}+\ket{101}+\ket{110}$
 \end_inset
 
  has 
 \begin_inset Formula $P_{\fh}=1$
 \end_inset
 
- over 
-\begin_inset Formula $\ff{7^{2}}$
+ for 
+\begin_inset Formula $p=7$
+\end_inset
+
+. In addition, the process of determining whether a 
+\emph on
+given
+\emph default
+ state 
+\begin_inset Formula $\ket{\Phi}$
+\end_inset
+
+ is a product state may depend on 
+\begin_inset Formula $p$
 \end_inset
 
 .
 \end_layout
 
 \begin_layout Standard
-Thus, in finite fields, the simplest way to calculate the number of unentangled
- states is to ignore equation
+Thus, in finite fields, the simplest way to calculate the number of unentangled states is to disregard equation
 \begin_inset space ~
+
 \end_inset
 
-(27) and to count the number of product states.
- This is exactly how the counting in section
+(27) and count the number of product states. This is exactly how the counting in section
 \begin_inset space ~
+
 \end_inset
 
-5.4 was produced, but the paper did not clarify that counting using equation
+5.4 was done, but the paper did not point out that counting relying only on equation
 \begin_inset space ~
+
 \end_inset
 
-(27) would be incorrect.
+(27) might not lead to the same result.
 \end_layout
 
 \begin_layout Paragraph*
@@ -301,25 +305,12 @@ Correction: Maximally entangled states.
 \end_layout
 
 \begin_layout Standard
-We correct the definition and the counting of maximally entangled states,
- and add equation
+We present below a new version of section
 \begin_inset space ~
-\end_inset
-
-(
-\begin_inset CommandInset ref
-LatexCommand ref
-reference "eq:john"
 
 \end_inset
 
-).
- The corrected version of section
-\begin_inset space ~
-\end_inset
-
-5.4 below has no influence on the rest of the article.
- 
+5.4 that correctly counts maximally entangled states. The rest of the article is independent of this revision.
 \end_layout
 
 \begin_layout Subsection
@@ -327,15 +318,38 @@ Maximal entanglement
 \end_layout
 
 \begin_layout Standard
-In conventional quantum mechanics, a state is maximally entangled when equation
-\begin_inset space ~
+In conventional quantum mechanics, a state 
+\begin_inset Formula $\ket{\Psi}$
 \end_inset
 
-(27) reports its purity to be 0.
- In the discrete case, states whose purity is a multiple of the field characteri
-stic are incorrectly labeled as maximally entangled.
- For example, consider a normalized 3-qubit product state 
-\begin_inset Formula $\ket{\Psi_{1}}$
+ is maximally entangled when equation
+\begin_inset space ~
+
+\end_inset
+
+(27) reports its purity to be 0. Therefore, in the discrete case, states whose computed purity is a multiple of the field characteristic 
+\begin_inset Formula $p$
+\end_inset
+
+ will be incorrectly labeled as maximally entangled by equation
+\begin_inset space ~
+
+\end_inset
+
+(27). This occurs trivially when 
+\begin_inset Formula $n ~|~ p$
+\end_inset
+
+.
+\end_layout
+
+\begin_layout Standard
+For example, consider the normalized 
+\begin_inset Formula $n=3$
+\end_inset
+
+-qubit product state 
+\begin_inset Formula $\ket{\Psi}$
 \end_inset
 
  over 
@@ -343,22 +357,94 @@ stic are incorrectly labeled as maximally entangled.
 \end_inset
 
 : 
-\begin_inset Formula 
-\[
-\ket{\Psi_{1}}=\ket{0}\otimes\left(\ket{0}-\ket{1}\right)\otimes\left(\ket{0}-\ket{1}\right)\textrm{ .}
+\begin_inset Formula \[
+\ket{\Psi}=\ket{0}\otimes\left(\ket{0}-\ket{1}\right)\otimes\left(\ket{0}-\ket{1}\right)\textrm{ .}
 \]
+\end_inset
+
+In this case the quantity 
+\begin_inset Formula $n P_{\fh} = 3 P_{\fh} = 0$
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+
+\begin_inset ERT
+status collapsed
+
+\begin_layout Plain Layout
+%% , where 
+\end_layout
 
 \end_inset
 
-In this case the re-scaled purity 
-\begin_inset Formula $\overline{P_{\fh}}=0$
+
+\begin_inset ERT
+status collapsed
+
+\begin_layout Plain Layout
+%% 
+\backslash
+[
+\end_layout
+
 \end_inset
 
-, where 
-\begin_inset Formula 
-\[
-\overline{P_{\fh}}=\sum_{j=1}^{n}\sum_{\mu=x,y,z}\left\langle \sigma_{\mu}^{j}\right\rangle ^{2}\textrm{ .}
-\]
+
+\begin_inset ERT
+status collapsed
+
+\begin_layout Plain Layout
+%% 
+\backslash
+overline{P_{
+\backslash
+fh}}=
+\backslash
+sum_{j=1}^{n}
+\backslash
+sum_{
+\backslash
+mu=x,y,z}
+\backslash
+left
+\backslash
+langle 
+\end_layout
+
+\end_inset
+
+
+\begin_inset ERT
+status collapsed
+
+\begin_layout Plain Layout
+%% 
+\backslash
+sigma_{
+\backslash
+mu}^{j}
+\backslash
+right
+\backslash
+rangle ^{2}
+\backslash
+textrm{ .}
+\end_layout
+
+\end_inset
+
+
+\begin_inset ERT
+status collapsed
+
+\begin_layout Plain Layout
+%% 
+\backslash
+]
+\end_layout
 
 \end_inset
 
@@ -366,16 +452,14 @@ In this case the re-scaled purity
 \end_layout
 
 \begin_layout Standard
-In continuous case, the zero purity actually means every summand is 
+In the continuous case, the zero purity actually means every summand is 
 \begin_inset Formula $0$
 \end_inset
 
 , i.e., 
-\begin_inset Formula 
-\begin{equation}
+\begin_inset Formula \begin{equation}
 \forall j,\forall\mu,\braket{\sigma_{\mu}^{j}}=0\textrm{ .}\label{eq:john}
 \end{equation}
-
 \end_inset
 
 Because equation (
@@ -385,8 +469,7 @@ reference "eq:john"
 
 \end_inset
 
-) avoids wrapping around when adding expectation values, it defines maximally
- entangled states over finite fields.
+) avoids wrapping around when adding expectation values, it defines maximally entangled states over finite fields.
 \end_layout
 
 \begin_layout Standard
@@ -407,11 +490,9 @@ Computing some examples for various
 \end_inset
 
  occur with frequency 
-\begin_inset Formula 
-\[
+\begin_inset Formula \[
 (p+1)p^{2}(p-1)^{2}=\{144,14\,112,145\,200,2339\,280,\ldots\}\ ,
 \]
-
 \end_inset
 
 and for general 
@@ -431,11 +512,9 @@ The irreducible state counts are reduced by
 \end_inset
 
 , giving 
-\begin_inset Formula 
-\[
+\begin_inset Formula \[
 p^{2}(p-1)^{2}=\{36,1764,12\,100,116\,964,\ldots\}\ ,
 \]
-
 \end_inset
 
 and in general for 
@@ -450,13 +529,10 @@ and in general for
 \end_layout
 
 \begin_layout Standard
-Repeating the computation, we find maximally entanglement states with frequencie
-s for two qubits of 
-\begin_inset Formula 
-\[
+Repeating the computation, we find maximally entanglement states with frequencies for two qubits of 
+\begin_inset Formula \[
 p\left(p-1\right)\left(p+1\right)^{2}=\left\{ 96,2688,15\,840,136\,800,\ldots\right\} \ .
 \]
-
 \end_inset
 
 The irreducible state counts for maximal entanglement are reduced by 
@@ -468,27 +544,24 @@ The irreducible state counts for maximal entanglement are reduced by
 \end_inset
 
  
-\begin_inset Formula 
-\[
+\begin_inset Formula \[
 p\left(p^{2}-1\right)=\left\{ 24,336,1320,6840,\ldots\right\} \ .
 \]
-
 \end_inset
 
 For three-qubits, there are 
 \begin_inset Formula $p^{3}\left(p^{4}-1\right)\left(p+1\right)$
 \end_inset
 
- instances of pure maximally entangled states, while the general formula
- for four-qubit states remains unclear.
+ instances of pure maximally entangled states, while the general formula for four-qubit states remains unclear.
 \end_layout
 
 \begin_layout Standard
+
 \begin_inset ERT
 status collapsed
 
 \begin_layout Plain Layout
-
 
 \backslash
 ack
@@ -501,7 +574,6 @@ ack
 status collapsed
 
 \begin_layout Plain Layout
-
 {}
 \end_layout
 
@@ -512,19 +584,16 @@ status collapsed
 status collapsed
 
 \begin_layout Plain Layout
-
 {
 \end_layout
 
 \end_inset
 
-We would like to thank John Gardiner for pointing out the need for this
- correction.
+We would like to thank John Gardiner for pointing out the need for this correction.
 \begin_inset ERT
 status collapsed
 
 \begin_layout Plain Layout
-
 }
 \end_layout
 
@@ -538,11 +607,11 @@ References
 \end_layout
 
 \begin_layout Standard
+
 \begin_inset ERT
 status collapsed
 
 \begin_layout Plain Layout
-
 {}
 \end_layout
 
@@ -552,6 +621,7 @@ status collapsed
 \end_layout
 
 \begin_layout Standard
+ 
 \begin_inset CommandInset bibtex
 LatexCommand bibtex
 bibfiles "gardinerbib"
