--- a/errata.tex
+++ b/errata.tex
@@ -93,22 +93,64 @@ We present below a new version of section~5.4 that correctly counts maximally en
 
 \subsection{Maximal entanglement}
 
+Equation~(27) for $P_{\fh}$ includes a normalization factor $\frac{1}{n}$. In the discrete case, this normalization factor is undefined when $p ~|~ n$. Equation~(27) also includes a summation of $n$ terms. In the discrete case, certainly when $p ~|~ n$ but also in other cases, this summation may vanish in the field even if the individual summands are non-zero. These anomalies are irrelevant for the classification of states with purity 1 as this is performed by directly checking the possibility of direct decomposition into product states, disregarding equation~(27). 
+
+For maximally entangled states, the purity calculation in conventional quantum mechanics using equation~(27) produces 0. Given the above observations, in a discrete field, equation~(27) may be undefined or may report a purity of 0 even for product states. In the discrete case, we therefore check for maximally entangled states using the following equation,
+\begin{equation}
+\forall j,\forall\mu,\braket{\sigma_{\mu}^{j}}^2 =0\textrm{ .}\label{eq:john}
+\end{equation}
+which avoids the normalization factor and simply checks that each summand is 0. 
+
+
+
+
+
+\bigskip
+\bigskip
+\bigskip
+*****************
+
+
 In conventional quantum mechanics, a state $\ket{\Psi}$ is maximally entangled
-when equation~(27) reports its purity to be 0. Therefore, in the discrete case,
+when equation~(27) for $P_{\fh}$ reports its purity to be 0. In this case, the $\frac{1}{n}$ normalization factor in $P_{\fh}$ does not affect the result and each term in the summation vanishes individually. In the discrete case, to avoid the singular cases when $p ~|~ n$, we must use $P_{\fh}$ 
+
+\begin{equation}
+\forall j,\forall\mu,\braket{\sigma_{\mu}^{j}}^2 =0\textrm{ .}\label{eq:john}
+\end{equation}
+Because equation (\ref{eq:john}) avoids wrapping around when adding
+expectation values, it defines maximally entangled states over finite
+fields.
+
+
+
+
+
+scaling does not affect the purity and the
+properties of the real and complex numbers imply that the individual terms of the summation are each 0. 
+
+==> scale purity; has no effect; new purity = n iff old = 1 for product
+==> scaling fails when p | n
+==> sum of terms = 0 because of wrapping around
+
+
+
+
+In the discrete case,
+
+
+
+
 states whose computed purity is a multiple of the field characteristic $p$ will be
-incorrectly labeled as maximally entangled by equation~(27). This occurs trivially when $n ~|~ p$. 
+incorrectly labeled as maximally entangled by equation~(27). 
 
 
 
-
-
-
-For example, consider
+This occurs trivially when $p ~|~ n$. For example,
 the normalized $n=3$-qubit product state $\ket{\Psi}$ over $\ff{3^{2}}$:
 \[
 \ket{\Psi}=\ket{0}\otimes\left(\ket{0}-\ket{1}\right)\otimes\left(\ket{0}-\ket{1}\right)\textrm{ .}
 \]
-In this case the quantity $n P_{\fh} = 3 P_{\fh} = 0$
+In this case the quantity $n P_{\fh} = 3 P_{\fh} = 0$ despite the fact that $\ket{\Psi}$ is a product state. 
 
 %% , where 
 %% \[
@@ -116,14 +158,7 @@ In this case the quantity $n P_{\fh} = 3 P_{\fh} = 0$
 %% \sigma_{\mu}^{j}\right\rangle ^{2}\textrm{ .}
 %% \]
 
-In the continuous case, the zero purity actually means every summand is
-$0$, i.e., 
-\begin{equation}
-\forall j,\forall\mu,\braket{\sigma_{\mu}^{j}}=0\textrm{ .}\label{eq:john}
-\end{equation}
-Because equation (\ref{eq:john}) avoids wrapping around when adding
-expectation values, it defines maximally entangled states over finite
-fields.
+
 
 
 Computing some examples for various $n$ and small values of $p$,
