errata.maximal.tex Added...

--- a/errata.lyx
+++ b/errata.lyx
@@ -1,4 +1,4 @@
-#LyX file created by tex2lyx 2.1
+#LyX 2.1 created this file. For more info see http://www.lyx.org/
 \lyxformat 474
 \begin_document
 \begin_header
@@ -57,10 +57,6 @@
 \addtocounter{equation}{39}
 \addtocounter{section}{5}
 \addtocounter{subsection}{3}
-
-
-
-
 \end_preamble
 \use_default_options false
 \maintain_unincluded_children false
@@ -133,11 +129,13 @@ Erratum: Geometry of discrete quantum computing
 \end_layout
 
 \begin_layout Author
-Andrew J. Hanson
+Andrew J.
+ Hanson
 \end_layout
 
 \begin_layout Address
-School of Informatics and Computing, Indiana University, Bloomington, IN 47405, U.S.A
+School of Informatics and Computing, Indiana University, Bloomington, IN
+ 47405, U.S.A
 \end_layout
 
 \begin_layout Author
@@ -153,7 +151,8 @@ Amr Sabry
 \end_layout
 
 \begin_layout Address
-School of Informatics and Computing, Indiana University, Bloomington, IN 47405, U.S.A
+School of Informatics and Computing, Indiana University, Bloomington, IN
+ 47405, U.S.A
 \end_layout
 
 \begin_layout Author
@@ -165,15 +164,16 @@ Department of Mathematics, Indiana University, Bloomington, IN 47405, U.S.A
 \end_layout
 
 \begin_layout Address
-School of Informatics and Computing, Indiana University, Bloomington, IN 47405, U.S.A
+School of Informatics and Computing, Indiana University, Bloomington, IN
+ 47405, U.S.A
 \end_layout
 
 \begin_layout Standard
-
 \begin_inset ERT
 status collapsed
 
 \begin_layout Plain Layout
+
 %% 
 \backslash
 noindent{
@@ -194,18 +194,15 @@ today}
 \noindent
 Section
 \begin_inset space ~
-
 \end_inset
 
 5.4 of our paper
 \begin_inset space ~
-
 \end_inset
 
 
 \begin_inset CommandInset citation
 LatexCommand cite
-after ""
 key "geometry"
 
 \end_inset
@@ -216,33 +213,32 @@ key "geometry"
 \begin_layout Paragraph*
 Clarification: Unentangled vs.
 \begin_inset space \space{}
-
 \end_inset
 
 product states.
 \end_layout
 
 \begin_layout Standard
-In conventional quantum mechanics, using the field of complex numbers, a state is unentangled when it can be expressed as a product state or, equivalently, when equation
+In conventional quantum mechanics, using the field of complex numbers, a
+ state is unentangled when it can be expressed as a product state or, equivalent
+ly, when equation
 \begin_inset space ~
-
 \end_inset
 
 (27) reports its purity to be 1
 \begin_inset space ~
-
 \end_inset
 
 
 \begin_inset CommandInset citation
 LatexCommand cite
-after ""
 key "PhysRevLett.92.107902, PhysRevA.68.032308"
 
 \end_inset
 
-. When using finite Galois fields 
-\begin_inset Formula $\ff{p^2}$
+.
+ When using finite Galois fields 
+\begin_inset Formula $\ff{p^{2}}$
 \end_inset
 
 , for particular choices of 
@@ -251,11 +247,11 @@ key "PhysRevLett.92.107902, PhysRevA.68.032308"
 
 , it is possible for equation
 \begin_inset space ~
-
 \end_inset
 
-(27) to produce a purity of 1 for some entangled states. For example, the normalized entangled state 
-\begin_inset Formula $\ket{\Psi} = \ket{011}+\left(2+\rmi\right)\ket{100}+\ket{101}+\ket{110}$
+(27) to produce a purity of 1 for some entangled states.
+ For example, the normalized entangled state 
+\begin_inset Formula $\ket{\Psi}=\ket{011}+\left(2+\rmi\right)\ket{100}+\ket{101}+\ket{110}$
 \end_inset
 
  has 
@@ -266,7 +262,8 @@ key "PhysRevLett.92.107902, PhysRevA.68.032308"
 \begin_inset Formula $p=7$
 \end_inset
 
-. In addition, the process of determining whether a 
+.
+ In addition, the process of determining whether a 
 \emph on
 given
 \emph default
@@ -282,19 +279,19 @@ given
 \end_layout
 
 \begin_layout Standard
-Thus, in finite fields, the simplest way to calculate the number of unentangled states is to disregard equation
+Thus, in finite fields, the simplest way to calculate the number of unentangled
+ states is to disregard equation
 \begin_inset space ~
-
 \end_inset
 
-(27) and count the number of product states. This is exactly how the counting in section
+(27) and count the number of product states.
+ This is exactly how the counting in section
 \begin_inset space ~
-
 \end_inset
 
-5.4 was done, but the paper did not point out that counting relying only on equation
+5.4 was done, but the paper did not point out that counting relying only
+ on equation
 \begin_inset space ~
-
 \end_inset
 
 (27) might not lead to the same result.
@@ -307,10 +304,10 @@ Correction: Maximally entangled states.
 \begin_layout Standard
 We present below a new version of section
 \begin_inset space ~
-
 \end_inset
 
-5.4 that correctly counts maximally entangled states. The rest of the article is independent of this revision.
+5.4 that correctly counts maximally entangled states.
+ The rest of the article is independent of this revision.
 \end_layout
 
 \begin_layout Subsection
@@ -320,7 +317,6 @@ Maximal entanglement
 \begin_layout Standard
 Equation
 \begin_inset space ~
-
 \end_inset
 
 (27) for 
@@ -331,53 +327,76 @@ Equation
 \begin_inset Formula $\frac{1}{n}$
 \end_inset
 
-. In the discrete case, this normalization factor is undefined when 
-\begin_inset Formula $p ~|~ n$
+.
+ In the discrete case, this normalization factor is undefined when 
+\begin_inset Formula $p~|~n$
 \end_inset
 
-. Equation
+.
+ Equation
 \begin_inset space ~
-
 \end_inset
 
 (27) also includes a summation of 
 \begin_inset Formula $n$
 \end_inset
 
- terms. In the discrete case, certainly when 
-\begin_inset Formula $p ~|~ n$
+ terms.
+ In the discrete case, certainly when 
+\begin_inset Formula $p~|~n$
 \end_inset
 
- but also in other cases, this summation may vanish in the field even if the individual summands are non-zero. These anomalies are irrelevant for the classification of states with purity 1 as this is performed by directly checking the possibility of direct decomposition into product states, disregarding equation
+ but also in other cases, this summation may vanish in the field even if
+ the individual summands are non-zero.
+ These anomalies are irrelevant for the classification of states with purity
+ 1 as this is performed by directly checking the possibility of direct decomposi
+tion into product states, disregarding equation
 \begin_inset space ~
-
 \end_inset
 
 (27).
 \end_layout
 
 \begin_layout Standard
-For maximally entangled states, the purity calculation in conventional quantum mechanics using equation
+For maximally entangled states, the purity calculation in conventional quantum
+ mechanics using equation
 \begin_inset space ~
-
 \end_inset
 
-(27) produces 0. Given the above observations, in a discrete field, equation
+(27) produces 0.
+ Given the above observations, in a discrete field, equation
 \begin_inset space ~
-
 \end_inset
 
-(27) may be undefined or may report a purity of 0 even for product states. In the discrete case, we therefore check for maximally entangled states using the following equation, 
-\begin_inset Formula \begin{equation}
-\forall j,\forall\mu,\braket{\sigma_{\mu}^{j}}^2 =0\textrm{ .}\label{eq:john}
+(27) may be undefined or may report a purity of 0 even for partially entangled
+ states.
+ For example, the normalized state 
+\begin_inset Formula $\ket{\Psi}=\left(1-\rmi\right)\left(\ket{00}+\ket{11}\right)\otimes\ket{000}$
+\end_inset
+
+ has 
+\begin_inset Formula $P_{\fh}=0$
+\end_inset
+
+ for 
+\begin_inset Formula $p=3$
+\end_inset
+
+, and is not maximally entangled because only the first two qubits are entangled.
+ In the discrete case, we therefore check for maximally entangled states
+ using the following equation, 
+\begin_inset Formula 
+\begin{equation}
+\forall j,\forall\mu,\braket{\sigma_{\mu}^{j}}^{2}=0\textrm{ ,}\label{eq:john}
 \end{equation}
+
 \end_inset
 
-which avoids the normalization factor and simply checks that each summand is 0.
+which avoids the normalization factor and simply checks that each summand
+ is 0.
 \end_layout
 
 \begin_layout Standard
-
 \begin_inset VSpace bigskip
 \end_inset
 
@@ -399,14 +418,14 @@ In conventional quantum mechanics, a state
 
  is maximally entangled when equation
 \begin_inset space ~
-
 \end_inset
 
 (27) for 
 \begin_inset Formula $P_{\fh}$
 \end_inset
 
- reports its purity to be 0. In this case, the 
+ reports its purity to be 0.
+ In this case, the 
 \begin_inset Formula $\frac{1}{n}$
 \end_inset
 
@@ -414,8 +433,9 @@ In conventional quantum mechanics, a state
 \begin_inset Formula $P_{\fh}$
 \end_inset
 
- does not affect the result and each term in the summation vanishes individually. In the discrete case, to avoid the singular cases when 
-\begin_inset Formula $p ~|~ n$
+ does not affect the result and each term in the summation vanishes individually.
+ In the discrete case, to avoid the singular cases when 
+\begin_inset Formula $p~|~n$
 \end_inset
 
 , we must use 
@@ -426,10 +446,11 @@ In conventional quantum mechanics, a state
 \end_layout
 
 \begin_layout Standard
-
-\begin_inset Formula \begin{equation}
-\forall j,\forall\mu,\braket{\sigma_{\mu}^{j}}^2 =0\textrm{ .}\label{eq:john}
+\begin_inset Formula 
+\begin{equation}
+\forall j,\forall\mu,\braket{\sigma_{\mu}^{j}}^{2}=0\textrm{ .}\label{eq:john}
 \end{equation}
+
 \end_inset
 
 Because equation (
@@ -439,15 +460,18 @@ reference "eq:john"
 
 \end_inset
 
-) avoids wrapping around when adding expectation values, it defines maximally entangled states over finite fields.
+) avoids wrapping around when adding expectation values, it defines maximally
+ entangled states over finite fields.
 \end_layout
 
 \begin_layout Standard
-scaling does not affect the purity and the properties of the real and complex numbers imply that the individual terms of the summation are each 0.
+scaling does not affect the purity and the properties of the real and complex
+ numbers imply that the individual terms of the summation are each 0.
 \end_layout
 
 \begin_layout Standard
-==> scale purity; has no effect; new purity = n iff old = 1 for product ==> scaling fails when p | n ==> sum of terms = 0 because of wrapping around
+==> scale purity; has no effect; new purity = n iff old = 1 for product
+ ==> scaling fails when p | n ==> sum of terms = 0 because of wrapping around
 \end_layout
 
 \begin_layout Standard
@@ -461,7 +485,6 @@ states whose computed purity is a multiple of the field characteristic
 
  will be incorrectly labeled as maximally entangled by equation
 \begin_inset space ~
-
 \end_inset
 
 (27).
@@ -469,10 +492,11 @@ states whose computed purity is a multiple of the field characteristic
 
 \begin_layout Standard
 This occurs trivially when 
-\begin_inset Formula $p ~|~ n$
+\begin_inset Formula $p~|~n$
 \end_inset
 
-. For example, the normalized 
+.
+ For example, the normalized 
 \begin_inset Formula $n=3$
 \end_inset
 
@@ -485,13 +509,15 @@ This occurs trivially when
 \end_inset
 
 : 
-\begin_inset Formula \[
+\begin_inset Formula 
+\[
 \ket{\Psi}=\ket{0}\otimes\left(\ket{0}-\ket{1}\right)\otimes\left(\ket{0}-\ket{1}\right)\textrm{ .}
 \]
+
 \end_inset
 
 In this case the quantity 
-\begin_inset Formula $n P_{\fh} = 3 P_{\fh} = 0$
+\begin_inset Formula $nP_{\fh}=3P_{\fh}=0$
 \end_inset
 
  despite the fact that 
@@ -502,11 +528,11 @@ In this case the quantity
 \end_layout
 
 \begin_layout Standard
-
 \begin_inset ERT
-status collapsed
+status open
 
 \begin_layout Plain Layout
+
 %% , where 
 \end_layout
 
@@ -514,9 +540,10 @@ status collapsed
 
 
 \begin_inset ERT
-status collapsed
+status open
 
 \begin_layout Plain Layout
+
 %% 
 \backslash
 [
@@ -526,9 +553,10 @@ status collapsed
 
 
 \begin_inset ERT
-status collapsed
+status open
 
 \begin_layout Plain Layout
+
 %% 
 \backslash
 overline{P_{
@@ -550,9 +578,10 @@ langle
 
 
 \begin_inset ERT
-status collapsed
+status open
 
 \begin_layout Plain Layout
+
 %% 
 \backslash
 sigma_{
@@ -570,9 +599,10 @@ textrm{ .}
 
 
 \begin_inset ERT
-status collapsed
+status open
 
 \begin_layout Plain Layout
+
 %% 
 \backslash
 ]
@@ -601,9 +631,11 @@ Computing some examples for various
 \end_inset
 
  occur with frequency 
-\begin_inset Formula \[
+\begin_inset Formula 
+\[
 (p+1)p^{2}(p-1)^{2}=\{144,14\,112,145\,200,2339\,280,\ldots\}\ ,
 \]
+
 \end_inset
 
 and for general 
@@ -623,9 +655,11 @@ The irreducible state counts are reduced by
 \end_inset
 
 , giving 
-\begin_inset Formula \[
+\begin_inset Formula 
+\[
 p^{2}(p-1)^{2}=\{36,1764,12\,100,116\,964,\ldots\}\ ,
 \]
+
 \end_inset
 
 and in general for 
@@ -640,10 +674,13 @@ and in general for
 \end_layout
 
 \begin_layout Standard
-Repeating the computation, we find maximally entanglement states with frequencies for two qubits of 
-\begin_inset Formula \[
+Repeating the computation, we find maximally entanglement states with frequencie
+s for two qubits of 
+\begin_inset Formula 
+\[
 p\left(p-1\right)\left(p+1\right)^{2}=\left\{ 96,2688,15\,840,136\,800,\ldots\right\} \ .
 \]
+
 \end_inset
 
 The irreducible state counts for maximal entanglement are reduced by 
@@ -655,24 +692,27 @@ The irreducible state counts for maximal entanglement are reduced by
 \end_inset
 
  
-\begin_inset Formula \[
+\begin_inset Formula 
+\[
 p\left(p^{2}-1\right)=\left\{ 24,336,1320,6840,\ldots\right\} \ .
 \]
+
 \end_inset
 
 For three-qubits, there are 
 \begin_inset Formula $p^{3}\left(p^{4}-1\right)\left(p+1\right)$
 \end_inset
 
- instances of pure maximally entangled states, while the general formula for four-qubit states remains unclear.
+ instances of pure maximally entangled states, while the general formula
+ for four-qubit states remains unclear.
 \end_layout
 
 \begin_layout Standard
-
 \begin_inset ERT
 status collapsed
 
 \begin_layout Plain Layout
+
 
 \backslash
 ack
@@ -685,6 +725,7 @@ ack
 status collapsed
 
 \begin_layout Plain Layout
+
 {}
 \end_layout
 
@@ -695,16 +736,19 @@ status collapsed
 status collapsed
 
 \begin_layout Plain Layout
+
 {
 \end_layout
 
 \end_inset
 
-We would like to thank John Gardiner for pointing out the need for this correction.
+We would like to thank John Gardiner for pointing out the need for this
+ correction.
 \begin_inset ERT
 status collapsed
 
 \begin_layout Plain Layout
+
 }
 \end_layout
 
@@ -718,11 +762,11 @@ References
 \end_layout
 
 \begin_layout Standard
-
 \begin_inset ERT
 status collapsed
 
 \begin_layout Plain Layout
+
 {}
 \end_layout
 
@@ -732,7 +776,6 @@ status collapsed
 \end_layout
 
 \begin_layout Standard
- 
 \begin_inset CommandInset bibtex
 LatexCommand bibtex
 bibfiles "gardinerbib"
